@@ -40,6 +40,7 @@ Version 1.5.0-svn:
     * it's now possible to specify with loop= how many times a sample
      associated with a sound source should be played
    * new [switch] conditional command
+   * new [unit_side] theme element : this is the side of the current unit (flag)
  * miscellaneous and bug fixes:
    * wmlxgettext now print some context information about the strings
      extracted (patch #993)
